--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 contexttimer
 decord
-diffusers<=0.16.0
-einops>=0.4.1
-fairscale==0.4.4
+diffusers
+einops
+fairscale
 ftfy
 iopath
 ipython
 omegaconf
-opencv-python-headless==4.5.5.64
+opencv-python-headless
 opendatasets
 packaging
 pandas
@@ -20,11 +20,11 @@ scikit-image
 sentencepiece
 spacy
 streamlit
-timm==0.4.12
-torch>=1.10.0
+timm
+torch
 torchvision
 tqdm
-transformers==4.33.2
+transformers
 webdataset
 wheel
 torchaudio
@@ -33,7 +33,7 @@ moviepy
 nltk
 peft
 
-easydict==1.9
-pyyaml_env_tag==0.1
-open3d==0.13.0
+easydict
+pyyaml_env_tag
+open3d
 h5py
